package com.survivalcoding;

public class Wizard {
    private int hp;
    private int mp = 100;  // 초기값 100 추가
    private String name;
    private Wand wand;

    public int getHp() {
        return hp;
    }

    public void setHp(int hp) {
        if (hp < 0) {
            hp = 0;
        }
        this.hp = hp;
    }

    public int getMp() {
        return mp;
    }

    public void setMp(int mp) {
        if (mp < 0) {
            throw new IllegalArgumentException("MP must be over 0.");
        }
        this.mp = mp;
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        if (name == null || name.length() < 3) {
            throw new IllegalArgumentException("Null and under 3 characters are not allowed for name.");
        }
        this.name = name;
    }

    public Wand getWand() {
        return wand;
    }

    public void setWand(Wand wand) {
        if (wand == null) {
            throw new IllegalArgumentException("Null is not allowed for wand.");
        }
        this.wand = wand;
    }

    void heal(Hero hero) {
        if (mp < 10) {
            System.out.println("Not enough MP");
            return;
        }
        hero.setHp(hero.getHp() + 20);
        mp -= 10;
        System.out.println("Cast heal. Character HP: " + hero.getHp());
    }
}